# market-pulse

./: .gitignore  LICENSE  Makefile  README.md  install.sh  mp  pyproject.toml
scripts/: fetch_sp500.py  fetch_universes.py  generate_fixtures.py
src/market_pulse/: __init__.py  __main__.py  config.py
src/market_pulse/chat/: __init__.py  availability.py  client.py  prompt.py  tools.py
src/market_pulse/data/: cache.py  models.py
src/market_pulse/data/providers/: base.py  yfinance_provider.py
src/market_pulse/engine/: indicators.py  scanner.py  scoring.py  trade_plan.py
src/market_pulse/engine/signals/: base.py  weekly.py  weekly_bear.py
src/market_pulse/ui/: app.py  commands.py  theme.css
src/market_pulse/ui/screens/: detail.py  scanner.py
src/market_pulse/ui/widgets/: candle_chart.py  chart_image.py  chat_drawer.py  score_bar.py
src/market_pulse/universe/: loaders.py
src/market_pulse/universe/data/: aex25.csv  bel20.csv  cac40.csv  cac_next20.csv  dax40.csv  ftse100.csv  ftsemib.csv  ibex35.csv  nasdaq100.csv  omxs30.csv  smi.csv  sp500.csv  sp600.csv  stoxx50.csv  ucits_etfs.csv
tests/: conftest.py  test_cache.py  test_indicators.py  test_models.py  test_scanner.py  test_scoring.py  test_signals_weekly.py  test_trade_plan.py  test_universe.py  test_yfinance_provider.py
tests/fixtures/: asml_bars_1y.csv  sp500_sample.csv
