[project]
name = "market-pulse"
version = "0.1.0"
description = "TUI swing-trading scanner — European/US equities on Trade Republic"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pandas-ta>=0.3.14b",
    "yfinance>=0.2.40",
    "aiohttp>=3.9",
    "textual>=0.75",
    "plotext>=5.2",
    "deep-translator>=1.11",
    "matplotlib>=3.8",
    "pillow>=10.0",
    "textual-image>=0.6",
    "claude-agent-sdk>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
market-pulse = "market_pulse.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_pulse"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
